docs/src/_static/theme_override.css
/* Used for very strong warning */
#slim-red-box-banner {
  background: #ff0000;
  box-sizing: border-box;
  color: #ffffff;
  font-weight: normal;
  padding: 0.5em;
}

#slim-red-box-banner a {
  color: #ffffff;
  font-weight: normal;
  text-decoration: underline;
}

/* bullet point list with green ticks */
ul.squarelist {
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type */
  list-style-type: "\2705";
  margin-left: 0;
  text-indent: 1em;
  padding-left: 5em;
}

/* custom css for the cards on the homepage */
.sd-card-img-top {
    width: 15% !important;
    position: absolute !important;
    padding-left: 10px;
    min-width: 50px;
    top: 50%;
    transform: translateY(-50%);
}

.sd-card-img {
    height: auto;
}

.custom-title {
    font-weight: bold;
    color: #1B8FB7 !important;
    text-align: left;
}

.custom-body {
    text-align: left;
    margin-left: max(45px, 15%);
}

.center {
    text-align: center;
}

